# Video2Knowledge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  PRD.md  PROGRAM_MAP.md  PROJECT_SNAPSHOT.md  PROJECT_STATUS.md  README.md  REFERENCES.md  ROADMAP.md  TODO.md  pyproject.toml
app/: __init__.py  audio.py  cli.py  downloader.py  errors.py  markdown_writer.py  models.py  pipeline.py  platform_adapter.py  summarizer.py  transcript.py  whisper.py
app/exporter/: __init__.py  obsidian.py
config/: settings.example.yaml
templates/: video_note.md.j2
tests/: __init__.py  test_mock_pipeline.py
