[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Video2Knowledge"
version = "0.1.0"
description = "Local First video-to-knowledge Markdown pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
video2knowledge = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

